--- a/QuanX/Rewrite_Remote.conf
+++ b/QuanX/Rewrite_Remote.conf
@@ -17,8 +17,6 @@ hostname = www.google.cn, newapp.szsmk.com, home.mi.com, api2.mina.mi.com, api.r
 ^(http|https):\/\/(www.)?jd\.com\/ url 302 https://www.jd.com/
 ^(http|https):\/\/(www.)?mi\.com\/ url 302 https://www.mi.com/
 
-# > Self use--------------------------------------------
-
 # > Citizen Card
 ^https:\/\/newapp\.szsmk\.com\/app\/config\/queryMainAd url reject
 ^https:\/\/newapp\.szsmk\.com\/app\/config\/queryPageAd url reject
@@ -34,8 +32,6 @@ https:\/\/api2\.mina\.mi\.com\/banner\/get url reject
 ^https?:\/\/api\.rr\.tv\/(?:ad\/getAll$|storage/business/rootName/app/homePage) url reject
 ^https?:\/\/api\.rr\.tv\/watch\/v\d\/get_movie_info url script-response-body https://raw.githubusercontent.com/Choler/Surge/master/Script/rrsp.js
 ^https?:\/\/api\.rr\.tv\/v\dplus\/index\/channel url script-response-body https://raw.githubusercontent.com/Choler/Surge/master/Script/rrsp.js
-
-# > Adblock---------------------------------------------
 
 # > AMap - m*.amap.com
 ^https?:\/\/m\d\.amap\.com\/ws\/valueadded\/alimama\/splash_screen\/ url reject
@@ -71,7 +67,7 @@ https:\/\/api2\.mina\.mi\.com\/banner\/get url reject
 ^https?:\/\/((25[0-5]|2[0-4]\d|1\d{2}|[1-9]?\d)\.){3}(25[0-5]|2[0-4]\d|1\d{2}|[1-9]?\d)\/music\/common\/upload\/t_splash_info\/ url reject
 
 # > PornHub
-;^https://\b((?!cn\.)\w{2,3})\.pornhub\.com(.*) url 302 https://cn.pornhub.com/
+^https://\b((?!cn\.)\w{2,3})\.pornhub\.com(.*) url 302 https://www.pornhub.com/
 ^https:?/\/.*?\.pornhub\.com\/.*/ads.*?ads.* url reject
 ^https:?/\/.*?\.pornhub\.com\/js/ht.js.* url reject
 ^https:?/\/.*?\.phncdn\.com.*?\/js\/vmobile/atatus.js\?.* url reject
@@ -85,44 +81,29 @@ https:\/\/api2\.mina\.mi\.com\/banner\/get url reject
 # > Q-Search--------------------------------------------
 # dlc xxx (DeepL 译至中)
 ^https:\/\/duckduckgo.com\/\?q=dlc(\+|%20)([^&]+).+ url script-echo-response https://raw.githubusercontent.com/zZPiglet/Task/master/asset/DeepLQ-search.js
-
 # dle xxx (DeepL 译至英)
 ^https:\/\/duckduckgo.com\/\?q=dle(\+|%20)([^&]+).+ url script-echo-response https://raw.githubusercontent.com/zZPiglet/Task/master/asset/DeepLQ-search.js
-
 # dlj xxx (DeepL 译至日)
 ^https:\/\/duckduckgo.com\/\?q=dlj(\+|%20)([^&]+).+ url script-echo-response https://raw.githubusercontent.com/zZPiglet/Task/master/asset/DeepLQ-search.js
-
 # bd xxx (百度)
 ^https:\/\/duckduckgo.com\/\?q=bd(\+|%20)([^&]+).+ url 302 https://www.baidu.com/s?wd=$2
-
 # zh xxx (知乎)
 ^https:\/\/duckduckgo.com\/\?q=zh(\+|%20)([^&]+).+ url 302 https://www.zhihu.com/search?q=$2
-
 # xxx （无指令默认为 Google）
 ^https:\/\/duckduckgo.com\/\?q=(?!dl(c|e|j)(\+|%20))([^&]+).+ url 302 https://www.google.com/search?q=$3
 
-# > Unlock----------------------------------------------
-
+# > Script
 # > AdGuard
 ^https?:\/\/mobile-api\.adguard\.com\/api\/\d(|\.\d)\/ios_validate_receipt$ url script-response-body https://raw.githubusercontent.com/Hikote/Free/master/Surge/Script/AdGuard.js
 
 # > JD Pricing History (By yichahucha)
 ^https?://api\.m\.jd\.com/client\.action\?functionId=(wareBusiness|serverConfig|basicConfig) url script-response-body https://raw.githubusercontent.com/yichahucha/surge/master/jd_price.js
 
-# > JD Unbind (By anker1209)
-;^https:\/\/shopmember\.m\.jd\.com\/shopcard\/\?(venderId=[0-9]+).* url 302 https:\/\/shopmember\.m\.jd\.com\/member\/memberCloseAccount\?$1
-
-# > XMind - *.xmind.*
-;https?:\/\/.*\.xmind\..*\/_res\/(devices|user_sub_status|appstore/sub) url script-response-body https://raw.githubusercontent.com/langkhach270389/Surge-LK/main/scripts/langkhach/xmind.js
-
 # > Boxjs
 ^https?://boxjs.net url script-analyze-echo-response https://raw.githubusercontent.com/chavyleung/scripts/master/box/chavy.boxjs.js
 
 # > Sub-store (By Peng-YM)
 ^https?:\/\/sub\.store url script-analyze-echo-response https://raw.githubusercontent.com/Peng-YM/Sub-Store/master/backend/sub-store.min.js
-
-# > 去微信公众号广告 (By Choler)
-;^https?:\/\/mp\.weixin\.qq\.com\/mp\/getappmsgad url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/QuantumultX/File/Wechat.js
 
 # > 全站替换为手机百度 Quark 的 User-Agent
 ^https?:\/\/(?!d\.pcs).*(?<!map)\.baidu\.com url request-header (\r\n)User-Agent:.+iPhone.+(\r\n) request-header $1User-Agent: Mozilla/5.0 (iPhone; CPU iPhone OS 13_5 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/13.1.1 Mobile/15E148 Safari/16C50 Quark/604.1 T7/10.3 SearchCraft/2.6.3 (Baidu; P1 8.0.0)$2
