--- a/QuanX/Rewrite_Remote.conf
+++ b/QuanX/Rewrite_Remote.conf
@@ -12,6 +12,8 @@ hostname = www.google.cn, newapp.szsmk.com, home.mi.com, api2.mina.mi.com, api.r
 # > Redirect Google Maps Service
 ^(http|https):\/\/(ditu|maps).google\.cn url 302 https://maps.google.com
 
+^(http|https):\/\/(cn.)?(pornhub)\.com url 302 https://www.pornhub.com
+
 # > Redirect HTTP to HTTPS
 ^(http|https):\/\/(www.)?taobao\.com\/ url 302 https://taobao.com/
 ^(http|https):\/\/(www.)?jd\.com\/ url 302 https://www.jd.com/
