--- a/QuantumultX/Quantumult X.conf
+++ b/QuantumultX/Quantumult X.conf
@@ -62,7 +62,7 @@ static=回国代理, direct, proxy, 自动选择, img-url=https://raw.githubuser
 
 static=网易音乐, direct, 🎧𝐌𝐮𝐬𝐢𝐜, 🎧𝐌𝐮𝐬𝐢𝐜𝟏, 🎧𝐌𝐮𝐬𝐢𝐜𝟐, 🎧𝐌𝐮𝐬𝐢𝐜𝟑, 🎧𝐌𝐮𝐬𝐢𝐜𝟒, 🎧𝐌𝐮𝐬𝐢𝐜𝟓, 🎧𝐌𝐮𝐬𝐢𝐜𝟔, 🎧𝐌𝐮𝐬𝐢𝐜𝟕, 🎧𝐌𝐮𝐬𝐢𝐜𝟖, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Netease_Music_Unlock.png
 
-url-latency-benchmark=自动选择, resource-tag-regex=🍋, server-tag-regex=香港, check-interval=80, tolerance=0, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Round_Robin.png
+url-latency-benchmark=自动选择, resource-tag-regex=🍋|🍎, server-tag-regex=香港, check-interval=80, tolerance=0, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Round_Robin.png
 
 static=电报代理, proxy, direct, 自动选择, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Telegram.png
 
@@ -118,13 +118,13 @@ https://raw.githubusercontent.com/DivineEngine/Profiles/master/Quantumult/Filter
 
 https://raw.githubusercontent.com/787a68/Rules/master/QuantumultX/Filter/Sub/Speedtest.txt, tag=🚀 SpeedTest, force-policy=网络测速, update-interval=86400, opt-parser=false, enabled=true
 
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/QuantumultX/Telegram/Telegram.list, tag=📱Telegram, force-policy=电报代理, update-interval=86400, opt-parser=false, enabled=true
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/Telegram/Telegram.list, tag=📱Telegram, force-policy=电报代理, update-interval=86400, opt-parser=false, enabled=true
 
 https://raw.githubusercontent.com/eHpo1/Rules/master/QuantumultX/Filter/Sub/YouTube.txt, tag=🎬 YouTube, force-policy=油管视频, enabled=true
 
 https://raw.githubusercontent.com/eHpo1/Rules/master/QuantumultX/Filter/Sub/Netflix.txt, tag=📺 Netflix, force-policy=奈飞娱乐, enabled=true
 
-https://raw.githubusercontent.com/echoops/emby/main/Filter/Emby.list, tag=💭 Emby, force-policy=公益影视, update-interval=86400, opt-parser=false, enabled=true
+https://raw.githubusercontent.com/YAOJIO/myself/master/QuantumultX/Filter/Emby.list, tag=💭 Emby, force-policy=公益影视, update-interval=86400, opt-parser=false, enabled=true
 
 https://raw.githubusercontent.com/Hedilict/QuantumultX/master/Filter/NetEaseCloudMusic.list, tag=🎸 解锁网易云音乐, force-policy=网易音乐, enabled=true
 
@@ -152,7 +152,13 @@ https://raw.githubusercontent.com/limbopro/Profiles/master/Quantumult/X/Filter/B
 [rewrite_remote]
 https://raw.githubusercontent.com/YAOJIO/myself/master/QuantumultX/Rewrite/Js.conf, tag=会员, update-interval=86400, opt-parser=true, enabled=true
 
+https://raw.githubusercontent.com/sngxpro/QuanX/master/rewrite/unlockvip.conf, tag=解锁vip, update-interval=86400, opt-parser=false, enabled=true
+
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rewrite/QuantumultX/Advertising/Advertising.conf, tag=去广告, update-interval=86400, opt-parser=false, enabled=true
+
+https://raw.githubusercontent.com/elecV2/QuantumultX-Tools/master/betterweb/zhihu.conf, tag=防跳转, update-interval=86400, opt-parser=true, enabled=true
+
+https://limbopro.xyz/Adblock4limbo.conf, tag=毒奶特供, enabled=true
 
 https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Q-Search_All_in_one.conf, tag=Q-Search, update-interval=86400, opt-parser=false, enabled=true
 
