--- a/QuantumultX/Quantumult X.conf
+++ b/QuantumultX/Quantumult X.conf
@@ -1,21 +1,15 @@
 # quantumult 全局配置 by YAOJIO
-# 20210208_123800
+# 20210426_01318
 # 以 ";" 或 "#" 或 "//" 开头的行为注释行。
 
 
 [general]
 network_check_url=http://www.baidu.com/
-
 server_check_url=http://www.gstatic.com/generate_204
-
 dns_exclusion_list = *.cmbchina.com, *.cmpassport.com, *.jegotrip.com.cn, *.icitymobile.mobi, *.pingan.com.cn, id6.me
-
 profile_img_url= https://raw.githubusercontent.com/YAOJIO/myself/master/YAOJIO.png
-
 excluded_routes=10.0.0.0/8, 127.0.0.0/8, 169.254.0.0/16, 192.0.2.0/24, 192.168.0.0/16, 198.51.100.0/24, 224.0.0.0/4
-
 geo_location_checker=http://ip-api.com/json/?lang=zh-CN, https://raw.githubusercontent.com/KOP-XIAO/QuantumultX/master/Scripts/IP_API.js
-
 resource_parser_url=https://raw.githubusercontent.com/KOP-XIAO/QuantumultX/master/Scripts/resource-parser.js
 
 #第一个filter为4g模式开启规则分流，第二个filter为其他wifi下开启规则分流，第三个wifi1修改成你路由器翻墙的wifi名开启直连模式，第四个wifi2为你需要全局代理的wifi名（这个一般不需要随便写就行）
@@ -24,6 +18,7 @@ resource_parser_url=https://raw.githubusercontent.com/KOP-XIAO/QuantumultX/maste
 
 
 [dns]
+no-ipv6
 server=119.29.29.29
 server=223.5.5.5
 server=114.114.114.114
