--- a/QuantumultX/Quantumult X.conf
+++ b/QuantumultX/Quantumult X.conf
@@ -49,7 +49,7 @@ server=/dl.l.google.com/119.29.29.29
 [policy]
 static=国内服务, proxy, direct, 自动选择, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/China.png
 
-static=回国代理, direct, proxy, 自动选择, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/China_Map.png
+static=回国代理, proxy, direct, 自动选择, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/China_Map.png
 
 static=网络测速, proxy, direct, 自动选择, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Speedtest.png
 
