--- a/Loon/Loon.conf
+++ b/Loon/Loon.conf
@@ -57,13 +57,13 @@ Others = NameRegex, FilterKey = "^(?!.*(HK|JP|US|KR|香港|台湾|日本|韩国|
 节点选择 = select,DIRECT,自动选择,手动选择
 自动选择 = url-test,香港,台湾,url = http://www.gstatic.com/generate_204,interval = 120,tolerance = 100
 手动选择 = select,香港,台湾,日本,韩国,美国,新加坡,Others
-国内服务 = select,DIRECT,节点选择,手动选择,自动选择
-网络测速 = select,DIRECT,节点选择,手动选择,自动选择
+国内服务 = select,DIRECT,节点选择,自动选择,手动选择
+网络测速 = select,DIRECT,节点选择,自动选择,手动选择
 苹果服务 = select,DIRECT,节点选择
 苹果系统 = select,DIRECT,REJECT,节点选择
 网易音乐 = select,DIRECT,网易云
 电报消息 = select,节点选择
-奈飞视频 = select,节点选择,奈飞
+奈飞视频 = select,奈飞,节点选择
 油管视频 = select,节点选择
 国际抖音 = select,节点选择
 公益影视 = select,节点选择
@@ -103,24 +103,23 @@ https://raw.githubusercontent.com/eHpo1/Rules/master/Surge4/Ruleset/Sub/YouTube.
 https://raw.githubusercontent.com/eHpo1/Rules/master/Surge4/Ruleset/Sub/Netflix.list, policy=奈飞视频, tag=Netflix, enabled=true
 https://raw.githubusercontent.com/eHpo1/Rules/master/Surge4/Ruleset/Sub/Pornhub.list, policy=节点选择, tag=PornHub, enabled=true
 https://raw.githubusercontent.com/eHpo1/Rules/master/Surge4/Ruleset/Sub/Telegram.list, policy=电报消息, tag=Telegram, enabled=true
-https://raw.githubusercontent.com/eHpo1/Rules/master/Surge4/Ruleset/Sub/PayPal.list, policy=节点选择, tag=PayPal, enabled=true
 
-https://raw.githubusercontent.com/nzw9314/Surge/master/Ruleset/Mail.list, policy=自动选择, tag=国外邮箱, enabled=true
-https://raw.githubusercontent.com/nzw9314/Surge/master/Ruleset/GoogleDrive.list, policy=自动选择, tag=谷歌云盘, enabled=true
-https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GoogleCN.list, policy=自动选择, tag=谷歌国内业务, enabled=true
+https://raw.githubusercontent.com/nzw9314/Surge/master/Ruleset/Mail.list, policy=节点选择, tag=国外邮箱, enabled=true
+https://raw.githubusercontent.com/nzw9314/Surge/master/Ruleset/GoogleDrive.list, policy=节点选择, tag=谷歌云盘, enabled=true
+https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GoogleCN.list, policy=节点选择, tag=谷歌国内业务, enabled=true
 
-https://raw.githubusercontent.com/nzw9314/Surge/master/Ruleset/BlockOTA.list, policy=自动选择, tag=屏蔽系统更新, enabled=true
-https://raw.githubusercontent.com/eHpo1/Rules/master/Surge4/Ruleset/Apple_CDN.list, policy=自动选择, tag=苹果CDN资源类, enabled=true
-https://raw.githubusercontent.com/eHpo1/Rules/master/Surge4/Ruleset/Apple_API.list, policy=自动选择, tag=苹果API服务类, enabled=true
+https://raw.githubusercontent.com/nzw9314/Surge/master/Ruleset/BlockOTA.list, policy=苹果系统, tag=屏蔽系统更新, enabled=true
+https://raw.githubusercontent.com/eHpo1/Rules/master/Surge4/Ruleset/Apple_CDN.list, policy=苹果服务, tag=苹果CDN资源类, enabled=true
+https://raw.githubusercontent.com/eHpo1/Rules/master/Surge4/Ruleset/Apple_API.list, policy=苹果服务, tag=苹果API服务类, enabled=true
 
-https://raw.githubusercontent.com/eHpo1/Rules/master/Surge4/Ruleset/GlobalMedia.list, policy=自动选择, tag=国外媒体, enabled=true
-https://raw.githubusercontent.com/eHpo1/Rules/master/Surge4/Ruleset/Global.list, policy=自动选择, tag=国外网址, enabled=true
+https://raw.githubusercontent.com/eHpo1/Rules/master/Surge4/Ruleset/GlobalMedia.list, policy=国外媒体, tag=国外媒体, enabled=true
+https://raw.githubusercontent.com/eHpo1/Rules/master/Surge4/Ruleset/Global.list, policy=国际网络, tag=国外网址, enabled=true
 
-https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list, policy=自动选择, tag=国内域名, enabled=true
-https://raw.githubusercontent.com/eHpo1/Rules/master/Surge4/Ruleset/Domestic.list, policy=自动选择, tag=国内网址, enabled=true
-https://raw.githubusercontent.com/eHpo1/Rules/master/Surge4/Ruleset/AsianMedia.list, policy=自动选择, tag=亚洲媒体, enabled=true
-https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list, policy=自动选择, tag=本地网络, enabled=true
-https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list, policy=自动选择, tag=国内云服务商IP段, enabled=true
+https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list, policy=国内服务, tag=国内域名, enabled=true
+https://raw.githubusercontent.com/eHpo1/Rules/master/Surge4/Ruleset/Domestic.list, policy=国内服务, tag=国内网址, enabled=true
+https://raw.githubusercontent.com/eHpo1/Rules/master/Surge4/Ruleset/AsianMedia.list, policy=国内服务, tag=亚洲媒体, enabled=true
+https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list, policy=国内服务, tag=本地网络, enabled=true
+https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list, policy=国内服务, tag=国内云服务商IP段, enabled=true
 
 
 [URL Rewrite]
@@ -152,15 +151,15 @@ enable = true
 
 
 [Remote Script]
-https://raw.githubusercontent.com/Tartarus2014/Loon-Script/master/Fake_Vip.conf, tag=Fake-VIP, enabled=true
+https://raw.githubusercontent.com/Tartarus2014/Loon-Script/master/Fake_Vip.conf, tag=VIP, enabled=true
 https://raw.githubusercontent.com/Tartarus2014/Loon-Script/master/Script.conf, tag=Script, enabled=true
 https://raw.githubusercontent.com/Tartarus2014/Loon-Script/master/Cookie.conf, tag=Cookie, enabled=false
 https://raw.githubusercontent.com/Tartarus2014/Loon-Script/master/Task.conf, tag=Task, enabled=false
-https://raw.githubusercontent.com/Tartarus2014/Loon-Script/master/JD.conf, tag=JD-LCK, enabled=true
+https://raw.githubusercontent.com/Tartarus2014/Loon-Script/master/JD.conf, tag=JD, enabled=true
 
 [Plugin]
 https://raw.subloon.cf/AccelerateRaw.plugin, tag=Github加速, enabled=true
-ttps://raw.githubusercontent.com/Tartarus2014/Loon-Script/master/Plugin/Host.plugin, tag=Host, enabled=true
+https://raw.githubusercontent.com/Tartarus2014/Loon-Script/master/Plugin/Host.plugin, tag=Host, enabled=true
 https://raw.githubusercontent.com/Peng-YM/Sub-Store/master/config/Loon.plugin, tag=Su-Store, enabled=true
 https://gitee.com/chavyleung/scripts/raw/master/box/rewrite/boxjs.rewrite.loon.plugin, tag=BoxJs, enabled=true
 https://github.com/Tartarus2014/For-own-use/raw/master/Loon/Plugin/HKMTMedia.plugin, tag=哔哩哔哩, enabled=false
