--- a/Loon/Loon.conf
+++ b/Loon/Loon.conf
@@ -55,13 +55,13 @@ Others = NameRegex, FilterKey = "^(?!.*(HK|JP|US|KR|香港|台湾|日本|韩国|
 
 [Proxy Group]
 节点选择 = select,DIRECT,自动选择,手动选择
-自动选择 = url-test,香港,台湾,url = http://www.gstatic.com/generate_204,interval = 120,tolerance = 100
+自动选择 = url-test,🍋,url = http://www.gstatic.com/generate_204,interval = 120,tolerance = 100
 手动选择 = select,香港,台湾,日本,韩国,美国,新加坡,Others
 国内服务 = select,DIRECT,节点选择,自动选择,手动选择
 网络测速 = select,DIRECT,节点选择,自动选择,手动选择
 苹果服务 = select,DIRECT,节点选择
 苹果系统 = select,DIRECT,REJECT,节点选择
-网易音乐 = select,DIRECT,网易云
+网易音乐 = select,DIRECT,网易云,🎧
 电报消息 = select,节点选择
 奈飞视频 = select,奈飞,节点选择
 油管视频 = select,节点选择
@@ -69,12 +69,12 @@ Others = NameRegex, FilterKey = "^(?!.*(HK|JP|US|KR|香港|台湾|日本|韩国|
 公益影视 = select,节点选择
 国外媒体 = select,节点选择
 国际网络 = select,节点选择
-香港节点 = select,香港
-台湾节点 = select,台湾
-美国节点 = select,美国
-日本节点 = select,日本
-狮城节点 = select,新加坡
-韩国节点 = select,韩国
+香港节点 = url-test,香港,url = http://www.qualcomm.cn/generate_204,interval = 120,tolerance = 100
+台湾节点 = url-test,台湾,url = http://www.qualcomm.cn/generate_204,interval = 120,tolerance = 100
+美国节点 = url-test,美国,url = http://www.qualcomm.cn/generate_204,interval = 120,tolerance = 100
+日本节点 = url-test,日本,url = http://www.qualcomm.cn/generate_204,interval = 120,tolerance = 100
+狮城节点 = url-test,新加坡,url = http://www.qualcomm.cn/generate_204,interval = 120,tolerance = 100
+韩国节点 = url-test,韩国,url = http://www.qualcomm.cn/generate_204,interval = 120,tolerance = 100
 
 
 [Rule]
