--- a/Loon/Loon.conf
+++ b/Loon/Loon.conf
@@ -26,7 +26,7 @@ test-timeout = 5
 🍋 = https://subscribe.bityun.org/api/v1/client/subscribe?token=3752cf73875ef042687fe91cd6a78ea5,parser-enable = true
 🍊 = https://xxft.cc/link/2uVhYigwzVWs3nJe?sub=3,parser-enable = true
 🍑 = https://wrq8888.xyz/link/v9zgxR5eaDiNArQ7?list=quantumultx,parser-enable = true
-🍎 = https://haojiahuo.live/link/L5b5gp97JkP06J36?list=quantumult,parser-enable = true
+🍎 = https://haojiahuo.live/link/L5b5gp97JkP06J36?sub=3,parser-enable = true
 🍓 = https://www.mojie.pw/api/v1/client/subscribe?token=b3882488792e9a145999dc12709aa668,parser-enable = true
 
 [Remote Filter]
