--- a/Loon/Loon.conf
+++ b/Loon/Loon.conf
@@ -28,6 +28,8 @@ test-timeout = 5
 🍑 = https://wrq8888.xyz/link/v9zgxR5eaDiNArQ7?list=quantumultx,parser-enable = true
 🍎 = https://haojiahuo.live/link/L5b5gp97JkP06J36?sub=3,parser-enable = true
 🍓 = https://www.mojie.pw/api/v1/client/subscribe?token=b3882488792e9a145999dc12709aa668,parser-enable = true
+机场 = https://suo.yt/W7BkpTS
+网易 = https://git.io/JfNq3, parser-enable = true
 
 [Remote Filter]
 # 筛选订阅节点，筛选后的结果可加入到策略组中，目前支持三种筛选方式
