--- a/Loon/Loon.conf
+++ b/Loon/Loon.conf
@@ -28,8 +28,7 @@ test-timeout = 5
 🍑 = https://wrq8888.xyz/link/v9zgxR5eaDiNArQ7?list=quantumultx,parser-enable = true
 🍎 = https://haojiahuo.live/link/L5b5gp97JkP06J36?sub=3,parser-enable = true
 🍓 = https://www.mojie.pw/api/v1/client/subscribe?token=b3882488792e9a145999dc12709aa668,parser-enable = true
-机场 = https://suo.yt/W7BkpTS
-网易 = https://git.io/JfNq3, parser-enable = true
+🎧 = https://git.io/JfNq3, parser-enable = true
 
 [Remote Filter]
 # 筛选订阅节点，筛选后的结果可加入到策略组中，目前支持三种筛选方式
@@ -52,7 +51,6 @@ Others = NameRegex, FilterKey = "^(?!.*(HK|JP|US|KR|香港|台湾|日本|韩国|
 2 = Shadowsocks,1.2.3.4,443,aes-128-gcm,"”password“",fast-open=false,udp=false
 3 = ShadowsocksR,1.2.3.4,443,aes-256-cfb,"”password“",auth_aes128_md5,{},tls1.2_ticket_auth,{},fast-open=false,udp=false
 4 = ShadowsocksR,1.2.3.4,10076,aes-128-cfb,"”password“",auth_aes128_md5,{},tls1.2_ticket_auth,{},fast-open=false,udp=false
-🎧 = http,106.52.127.72,19951
 
 
 [Proxy Group]
