--- a/Loon/Loon.conf
+++ b/Loon/Loon.conf
@@ -61,7 +61,7 @@ Others = NameRegex, FilterKey = "^(?!.*(HK|JP|US|KR|香港|台湾|日本|韩国|
 网络测速 = select,DIRECT,节点选择,自动选择,手动选择
 苹果服务 = select,DIRECT,节点选择
 苹果系统 = select,DIRECT,REJECT,节点选择
-网易音乐 = select,DIRECT,网易云,🎧
+网易音乐 = select,DIRECT,网易云
 电报消息 = select,节点选择
 奈飞视频 = select,奈飞,节点选择
 油管视频 = select,节点选择
