--- a/Loon/Loon.conf
+++ b/Loon/Loon.conf
@@ -28,7 +28,8 @@ test-timeout = 5
 🍑 = https://wrq8888.xyz/link/v9zgxR5eaDiNArQ7?list=quantumultx,parser-enable = true
 🍎 = https://haojiahuo.live/link/L5b5gp97JkP06J36?sub=3,parser-enable = true
 🍓 = https://www.mojie.pw/api/v1/client/subscribe?token=b3882488792e9a145999dc12709aa668,parser-enable = true
-🎧 = https://git.io/JfNq3, parser-enable = true
+🎧 = https://git.io/JfNq3,parser-enable = true
+
 
 [Remote Filter]
 # 筛选订阅节点，筛选后的结果可加入到策略组中，目前支持三种筛选方式
@@ -83,7 +84,6 @@ Others = NameRegex, FilterKey = "^(?!.*(HK|JP|US|KR|香港|台湾|日本|韩国|
 # Strategy:DIRECT,Proxy,REJECT
 # Options:force-remote-dns(Default:false),no-resolve
 DOMAIN-SUFFIX,music.126.net,DIRECT
-# GeoIP China
 GEOIP,CN,DIRECT
 FINAL,节点选择
 
@@ -103,10 +103,6 @@ https://raw.githubusercontent.com/eHpo1/Rules/master/Surge4/Ruleset/Sub/YouTube.
 https://raw.githubusercontent.com/eHpo1/Rules/master/Surge4/Ruleset/Sub/Netflix.list, policy=奈飞视频, tag=Netflix, enabled=true
 https://raw.githubusercontent.com/eHpo1/Rules/master/Surge4/Ruleset/Sub/Pornhub.list, policy=节点选择, tag=PornHub, enabled=true
 https://raw.githubusercontent.com/eHpo1/Rules/master/Surge4/Ruleset/Sub/Telegram.list, policy=电报消息, tag=Telegram, enabled=true
-
-https://raw.githubusercontent.com/nzw9314/Surge/master/Ruleset/Mail.list, policy=节点选择, tag=国外邮箱, enabled=true
-https://raw.githubusercontent.com/nzw9314/Surge/master/Ruleset/GoogleDrive.list, policy=节点选择, tag=谷歌云盘, enabled=true
-https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GoogleCN.list, policy=节点选择, tag=谷歌国内业务, enabled=true
 
 https://raw.githubusercontent.com/nzw9314/Surge/master/Ruleset/BlockOTA.list, policy=苹果系统, tag=屏蔽系统更新, enabled=true
 https://raw.githubusercontent.com/eHpo1/Rules/master/Surge4/Ruleset/Apple_CDN.list, policy=苹果服务, tag=苹果CDN资源类, enabled=true
@@ -151,21 +147,21 @@ enable = true
 
 
 [Remote Script]
+https://raw.githubusercontent.com/Tartarus2014/Loon-Script/master/JD.conf, tag=Lx0301, enabled=true
 https://raw.githubusercontent.com/Tartarus2014/Loon-Script/master/Fake_Vip.conf, tag=VIP, enabled=true
+https://raw.githubusercontent.com/Tartarus2014/Loon-Script/master/Task.conf, tag=Task, enabled=true
 https://raw.githubusercontent.com/Tartarus2014/Loon-Script/master/Script.conf, tag=Script, enabled=true
 https://raw.githubusercontent.com/Tartarus2014/Loon-Script/master/Cookie.conf, tag=Cookie, enabled=false
-https://raw.githubusercontent.com/Tartarus2014/Loon-Script/master/Task.conf, tag=Task, enabled=false
-https://raw.githubusercontent.com/Tartarus2014/Loon-Script/master/JD.conf, tag=JD, enabled=true
 
 [Plugin]
-https://raw.subloon.cf/AccelerateRaw.plugin, tag=Github加速, enabled=true
+https://raw.subloon.cf/AccelerateRaw.plugin, tag=Github加速, enabled=false
 https://raw.githubusercontent.com/Tartarus2014/Loon-Script/master/Plugin/Host.plugin, tag=Host, enabled=true
 https://raw.githubusercontent.com/Peng-YM/Sub-Store/master/config/Loon.plugin, tag=Su-Store, enabled=true
 https://gitee.com/chavyleung/scripts/raw/master/box/rewrite/boxjs.rewrite.loon.plugin, tag=BoxJs, enabled=true
 https://github.com/Tartarus2014/For-own-use/raw/master/Loon/Plugin/HKMTMedia.plugin, tag=哔哩哔哩, enabled=false
 https://raw.githubusercontent.com/Tartarus2014/Loon-Script/master/Plugin/Block/Advertising.plugin, tag=去广告, enabled=true
 https://raw.githubusercontent.com/Tartarus2014/Loon-Script/master/Plugin/Block/YouTubeAdsTest.plugin, tag=YouTube去广告, enabled=false
-https://raw.githubusercontent.com/Tartarus2014/Loon-Script/master/Plugin/DouYin.plugin, tag=抖音去广告水印, enabled=false
+https://raw.githubusercontent.com/Tartarus2014/Loon-Script/master/Plugin/DouYin.plugin, tag=抖音去广告水印, enabled=true
 https://raw.githubusercontent.com/Tartarus2014/Loon-Script/master/Plugin/Block/Block%20Update.plugin, tag=屏蔽iOS系统更新, enabled=false
 # 下面3个Tiktok解锁只能同时开启一个，其他禁用！
 https://raw.githubusercontent.com/Tartarus2014/Loon-Script/master/Plugin/Unlock/TikTokJP.plugin, tag=解锁TikTok 日本, enabled=false
