--- a/QuantumultX/quantumult.conf
+++ b/QuantumultX/quantumult.conf
@@ -46,47 +46,45 @@ server=/dl.google.com/119.29.29.29
 server=/dl.l.google.com/119.29.29.29
 
 [policy]
-static=国内服务, proxy, direct, 手动选择, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/China.png
+static=国内服务, proxy, direct, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/China.png
 
-static=回国代理, proxy, direct, 手动选择, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/China_Map.png
+static=回国代理, proxy, direct, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/China_Map.png
 
-static=网络测速, proxy, direct, 手动选择, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Speedtest.png
+static=网络测速, proxy, direct, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Speedtest.png
 
-static=苹果服务, proxy, direct, 手动选择, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Apple.png
+static=苹果服务, proxy, direct, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Apple.png
 
-static=苹果系统, proxy, direct, reject, 手动选择, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Apple_Update.png
+static=苹果系统, proxy, direct, reject, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Apple_Update.png
 
 static=网易音乐, direct, 🎧𝐌𝐮𝐬𝐢𝐜, 🎧𝐌𝐮𝐬𝐢𝐜𝟏, 🎧𝐌𝐮𝐬𝐢𝐜𝟐, 🎧𝐌𝐮𝐬𝐢𝐜𝟑, 🎧𝐌𝐮𝐬𝐢𝐜𝟒, 🎧𝐌𝐮𝐬𝐢𝐜𝟓, 🎧𝐌𝐮𝐬𝐢𝐜𝟔, 🎧𝐌𝐮𝐬𝐢𝐜𝟕, 🎧𝐌𝐮𝐬𝐢𝐜𝟖, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Netease_Music_Unlock.png
 
-static=手动选择, 香港 G-01 | Amazon | AGA | x0.8, 香港 G-02 | Amazon | AGA | x0.8, 香港 G-03 | Amazon | AGA | x0.8, 香港 B-01 | Amazon | BGP | x0.8, 香港 B-02 | Amazon | BGP | x0.8, 香港 B-03 | Amazon | BGP | x0.8, 香港 R-01 | Amazon | Anycast | x0.8, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Round_Robin.png
+static=电报代理, proxy, direct, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Telegram.png
 
-static=电报代理, proxy, direct, 手动选择, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Telegram.png
+static=油管视频, proxy, direct, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/YouTube.png
 
-static=油管视频, proxy, direct, 手动选择, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/YouTube.png
+static=国际抖音, proxy, direct, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/TikTok.png
 
-static=国际抖音, proxy, direct, 手动选择, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/TikTok.png
+static=奈飞娱乐, proxy, direct, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Netflix_Letter.png
 
-static=奈飞娱乐, proxy, direct, 手动选择, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Netflix_Letter.png
+static=公益影视, proxy, direct, img-url=https://raw.githubusercontent.com/echoops/emby/main/IconSet/Emby.png
 
-static=公益影视, proxy, direct, 手动选择, img-url=https://raw.githubusercontent.com/echoops/emby/main/IconSet/Emby.png
+static=国际网络, proxy, direct, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Global.png
 
-static=国际网络, proxy, direct, 手动选择, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Global.png
+static=国际影视, proxy, direct, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/ForeignMedia.png
 
-static=国际影视, proxy, direct, 手动选择, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/ForeignMedia.png
+static=香港节点, proxy, direct, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Hong_Kong.png
 
-static=香港节点, proxy, direct, 手动选择, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Hong_Kong.png
+static=台湾节点, proxy, direct, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/China.png
 
-static=台湾节点, proxy, direct, 手动选择, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/China.png
+static=美国节点, proxy, direct, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/United_States.png
 
-static=美国节点, proxy, direct, 手动选择, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/United_States.png
+static=日本节点, proxy, direct, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Japan.png
 
-static=日本节点, proxy, direct, 手动选择, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Japan.png
+static=韩国节点, proxy, direct, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Korea.png
 
-static=韩国节点, proxy, direct, 手动选择, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Korea.png
+static=狮城节点, proxy, direct, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Singapore.png
 
-static=狮城节点, proxy, direct, 手动选择, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Singapore.png
-
-static=欧洲节点, proxy, direct, 手动选择, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/United_Kingdom.png
+static=欧洲节点, proxy, direct, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/United_Kingdom.png
 
 
 [server_remote]
