--- a/QuanX/Rewrite_Remote.conf
+++ b/QuanX/Rewrite_Remote.conf
@@ -1,4 +1,4 @@
-hostname = www.google.cn, newapp.szsmk.com, home.mi.com, api2.mina.mi.com, api.rr.tv, mobile-api.adguard.com, api.m.jd.com, m*.amap.com, *.cp31.ott.cibntv.net, act.vip.iqiyi.com, img*.360buyimg.com, interface*.music.163.com, sub.store, mp.weixin.qq.com,*.baidu.com,duckduckgo.com, -*.phncdn.com, www.pornhub.com, cn.pornhub.com, *.pornhub.com
+hostname = www.google.cn, newapp.szsmk.com, home.mi.com, api2.mina.mi.com, api.rr.tv, mobile-api.adguard.com, api.m.jd.com, m*.amap.com, *.cp31.ott.cibntv.net, act.vip.iqiyi.com, img*.360buyimg.com, interface*.music.163.com, mp.weixin.qq.com,*.baidu.com,duckduckgo.com, -*.phncdn.com, www.pornhub.com, cn.pornhub.com, *.pornhub.com
 
 # > WeChat Official Account
 ^https?:\/\/mp\.weixin\.qq\.com\/mp\/getappmsgad url response-body "advertisement_num":\d,"advertisement_info":\[.+\], response-body "advertisement_num":0,"advertisement_info":[],
@@ -85,8 +85,8 @@ https:\/\/api2\.mina\.mi\.com\/banner\/get url reject
 # > Boxjs
 ^https?://boxjs.net url script-analyze-echo-response https://raw.githubusercontent.com/chavyleung/scripts/master/box/chavy.boxjs.js
 
-# > Sub-store (By Peng-YM)
-^https?:\/\/sub\.store url script-analyze-echo-response https://raw.githubusercontent.com/Peng-YM/Sub-Store/master/backend/sub-store.min.js
+# > Sub-store (By Peng-YM) - sub.store
+;^https?:\/\/sub\.store url script-analyze-echo-response https://raw.githubusercontent.com/Peng-YM/Sub-Store/master/backend/sub-store.min.js
 
 # > 全站替换为手机百度 Quark 的 User-Agent
 ^https?:\/\/(?!d\.pcs).*(?<!map)\.baidu\.com url request-header (\r\n)User-Agent:.+iPhone.+(\r\n) request-header $1User-Agent: Mozilla/5.0 (iPhone; CPU iPhone OS 13_5 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/13.1.1 Mobile/15E148 Safari/16C50 Quark/604.1 T7/10.3 SearchCraft/2.6.3 (Baidu; P1 8.0.0)$2
