--- a/Loon/Loon.conf
+++ b/Loon/Loon.conf
@@ -25,7 +25,7 @@ test-timeout = 5
 [Remote Proxy]
 🍋 = https://subscribe.bityun.org/api/v1/client/subscribe?token=3752cf73875ef042687fe91cd6a78ea5,parser-enable = true
 🍊 = https://xxft.cc/link/2uVhYigwzVWs3nJe?sub=3,parser-enable = true
-🍑 = https://wrq8888.xyz/link/JDzNtT2tb82Ku3No?list=quantumultx,parser-enable = true
+🍑 = https://wrq8888.xyz/link/JDzNtT2tb82Ku3No?sub=3,parser-enable = true
 🍎 = https://haojiahuo.live/link/L5b5gp97JkP06J36?sub=3,parser-enable = true
 🍓 = https://www.mojie.pw/api/v1/client/subscribe?token=b3882488792e9a145999dc12709aa668,parser-enable = true
 🎧 = https://git.io/JfNq3,parser-enable = true
