--- a/MacBook M1.conf
+++ b/MacBook M1.conf
@@ -116,8 +116,6 @@ https://raw.githubusercontent.com/General74110/QuantumultX/main/Privacy.list, ta
 #*******************************************************************************
 https://raw.githubusercontent.com/General74110/QuantumultX/main/Advertising.list, tag=📵 广告拦截, img-url=https://raw.githubusercontent.com/General74110/PNG/master/Advertising.png, update-interval=86400, opt-parser=true, enabled=true
 #*******************************************************************************
-https://raw.githubusercontent.com/General74110/QuantumultX/main/System%20updates.list, tag=系统更新, update-interval=86400, opt-parser=false, enabled=true
-#*******************************************************************************
 https://github.com/General74110/ios_rule_script/raw/master/rule/QuantumultX/TestFlight/TestFlight.list, tag=Test Flight, update-interval=86400, opt-parser=false, enabled=true
 #*******************************************************************************
 https://github.com/blackmatrix7/ios_rule_script/raw/master/rule/QuantumultX/Apple/Apple.list, tag=Apple, update-interval=86400, opt-parser=false, enabled=true
@@ -149,8 +147,6 @@ https://github.com/General74110/ios_rule_script/raw/master/rule/QuantumultX/Wiki
 # update-interval 为更新时间参数，单位：秒, 默认更新时间为：24*60*60=86400 秒，也就是24小时
 [rewrite_remote]
 #——————————————————————————————————————————————————————————————————————————-----
-#*******************************************************************************
-https://raw.githubusercontent.com/General74110/QuantumultX/main/Price.conf, tag=京东淘宝比价, update-interval=86400, opt-parser=true, enabled=false
 #*******************************************************************************
 https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Get_Cookie_New.conf, tag=Get-Cookie, update-interval=86400, opt-parser=false, enabled=true
 #*******************************************************************************
@@ -232,6 +228,25 @@ host-suffix, baidu.com, 🇨🇳 回国
  host, ocsp.apple.com, reject 
  host-suffix, ocsp.digicert.com, reject 
  host, ppq.apple.com, reject
+ #*******************************************************************************
+ #屏蔽系统更新
+ HOST,ns.itunes.apple.com,系统更新
+HOST,updates-http.cdn-apple.com,系统更新
+HOST,updates.cdn-apple.com,系统更新
+HOST,xp.apple.com,系统更新
+HOST-SUFFIX,appldnld-lb.apple.com.akadns.net,系统更新
+HOST-SUFFIX,appldnld.apple.com,系统更新
+HOST-SUFFIX,appldnld.apple.com.akadns.net,系统更新
+HOST-SUFFIX,appldnld.g.aaplimg.com,系统更新
+HOST-SUFFIX,gdmf.apple.com,系统更新
+HOST-SUFFIX,gdmf.apple.com.akadns.net,系统更新
+HOST-SUFFIX,mesu-cdn.apple.com.akadns.net,系统更新
+HOST-SUFFIX,mesu-cdn.origin-apple.com.akadns.net,系统更新
+HOST-SUFFIX,mesu.apple.com,系统更新
+HOST-SUFFIX,mesu.g.aaplimg.com,系统更新
+HOST-SUFFIX,ocsp-lb.apple.com.akadns.net,系统更新
+HOST-SUFFIX,ocsp.apple.com,系统更新
+HOST-SUFFIX,ocsp.g.aaplimg.com,系统更新
 #*******************************************************************************
 #爱奇艺去广告 
  host, notice.ppstream.com, reject 
@@ -336,6 +351,9 @@ https://github.com/General74110/Sub-Store/blob/master/backend/sub-store.js, tag=
 #******************************************************************************
 #优酷去片头片尾广告
  ^http:\/\/vali\.cp31\.ott\.cibntv\.net\/youku\/ url reject-img
+ #抖音去水印
+^https?:\/\/.+?\.amemv\.com\/aweme\/v\d\/(feed|aweme\/post|follow\/feed|nearby\/feed|search\/item|general\/search\/single|hot\/search\/video\/list)\/ url script-request-header https://raw.githubusercontent.com/General74110/MacBook-M1/master/Aweme.js
+^https?:\/\/.+?\.amemv\.com\/aweme\/v\d\/(feed|aweme\/post|follow\/feed|nearby\/feed|search\/item|general\/search\/single|hot\/search\/video\/list)\/ url script-response-body https://raw.githubusercontent.com/General74110/MacBook-M1/master/Aweme.js
 #——————————————————————————————————————————————————————————————————————————-----
 ################################   主机名   #####################################
 # 开启 mitm，需要自行在Quantumult X中生成证书、安装、信任
@@ -343,7 +361,7 @@ https://github.com/General74110/Sub-Store/blob/master/backend/sub-store.js, tag=
 #——————————————————————————————————————————————————————————————————————————-----
 skip_validating_cert = true
 #——————————————————————————————————————————————————————————————————————————-----
-hostname = glados.rocks, 
+hostname = glados.rocks, *.amemv.com, *.amemv.com, vali.cp31.ott.cibntv.net, sub.store
 #——————————————————————————————————————————————————————————————————————————-----
 ##################################  证书   #####################################
 passphrase = DA7061C8
