--- a/QuanX/Rewrite_Remote.conf
+++ b/QuanX/Rewrite_Remote.conf
@@ -1,18 +1,14 @@
-hostname = pan.baidu.com,www.google.cn, newapp.szsmk.com, home.mi.com, api2.mina.mi.com, api.rr.tv, mobile-api.adguard.com, api.m.jd.com, m*.amap.com, *.cp31.ott.cibntv.net, act.vip.iqiyi.com, img*.360buyimg.com, interface*.music.163.com, mp.weixin.qq.com,*.baidu.com,duckduckgo.com, -*.phncdn.com, www.pornhub.com, cn.pornhub.com, *.pornhub.com
+hostname = www.google.cn, newapp.szsmk.com, home.mi.com, api2.mina.mi.com, api.rr.tv, mobile-api.adguard.com, api.m.jd.com, m*.amap.com, *.cp31.ott.cibntv.net, act.vip.iqiyi.com, img*.360buyimg.com, interface*.music.163.com, mp.weixin.qq.com,duckduckgo.com
 
 # > WeChat Official Account
 ^https?:\/\/mp\.weixin\.qq\.com\/mp\/getappmsgad url response-body "advertisement_num":\d,"advertisement_info":\[.+\], response-body "advertisement_num":0,"advertisement_info":[],
 
 # URL Rewrite
-
-# > Redirect--------------------------------------------
 # > Redirect Google Search Service
 ^(http|https):\/\/(www.)?(g|google)\.cn url 302 https://www.google.com
 
 # > Redirect Google Maps Service
 ^(http|https):\/\/(ditu|maps).google\.cn url 302 https://maps.google.com
-
-;^(http|https):\/\/(cn.)?(pornhub)\.com url 302 https://www.pornhub.com
 
 # > Redirect HTTP to HTTPS
 ^(http|https):\/\/(www.)?taobao\.com\/ url 302 https://taobao.com/
@@ -85,7 +81,8 @@ https:\/\/api2\.mina\.mi\.com\/banner\/get url reject
 # > Boxjs
 ^https?://boxjs.net url script-analyze-echo-response https://raw.githubusercontent.com/chavyleung/scripts/master/box/chavy.boxjs.js
 
-https:\/\/pan\.baidu\.com\/rest\/2\.0\/membership\/user url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/BaiduCloud.js
+# > Baidu Cloud - pan.baidu.com
+;https:\/\/pan\.baidu\.com\/rest\/2\.0\/membership\/user url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/BaiduCloud.js
 
 # > Sub-store (By Peng-YM) - sub.store
 ;^https?:\/\/sub\.store url script-analyze-echo-response https://raw.githubusercontent.com/Peng-YM/Sub-Store/master/backend/sub-store.min.js
