--- a/MacBook M1.conf
+++ b/MacBook M1.conf
@@ -62,6 +62,8 @@ static=AppStore, 🇨🇳 回国, 美国, img-url=https://github.com/General7411
 #*******************************************************************************
 static=TestFlight, 🇨🇳 回国, 美国, img-url=https://github.com/General74110/mini/raw/master/Alpha/testflight.png
 #*******************************************************************************
+static=SteanCN, 🇨🇳 回国, img-url=https://raw.githubusercontent.com/General74110/PNG/master/steam.png
+#*******************************************************************************
 static=网易云音乐, 🇨🇳 回国, img-url=https://github.com/General74110/mini/raw/master/Alpha/Netease.png
 #*******************************************************************************
 url-latency-benchmark=自动选择, server-tag-regex=^((?!🎧𝐌𝐮𝐬𝐢𝐜|解锁).)*$, check-interval=10, tolerance=0, img-url=https://github.com/General74110/mini/raw/master/Alpha/Azure.png
@@ -110,17 +112,19 @@ url-latency-benchmark=日本, server-tag-regex=(?=.*(日本|JP|(?i)Japan))^((?!(
 # 部分规则有先后顺序要求，调整顺序可能失效
 [filter_remote]
 #——————————————————————————————————————————————————————————————————————————-----
-https://raw.githubusercontent.com/General74110/QuantumultX/main/Hijacking.list, tag=运营劫持, update-interval=86400, opt-parser=true, enabled=true
+https://raw.githubusercontent.com/General74110/QuantumultX/main/Hijacking.list, tag=运营劫持, update-interval=86400, opt-parser=true, enabled=flase
 #*******************************************************************************
-https://raw.githubusercontent.com/General74110/QuantumultX/main/Privacy.list, tag=隐私保护, update-interval=86400, opt-parser=false, enabled=true
+https://raw.githubusercontent.com/General74110/QuantumultX/main/Privacy.list, tag=隐私保护, update-interval=86400, opt-parser=false, enabled=flase
 #*******************************************************************************
-https://raw.githubusercontent.com/General74110/QuantumultX/main/Advertising.list, tag=📵 广告拦截, img-url=https://raw.githubusercontent.com/General74110/PNG/master/Advertising.png, update-interval=86400, opt-parser=true, enabled=true
+https://raw.githubusercontent.com/General74110/QuantumultX/main/Advertising.list, tag=📵 广告拦截, img-url=https://raw.githubusercontent.com/General74110/PNG/master/Advertising.png, update-interval=86400, opt-parser=true, enabled=flase
 #*******************************************************************************
 https://github.com/General74110/ios_rule_script/raw/master/rule/QuantumultX/TestFlight/TestFlight.list, tag=Test Flight, update-interval=86400, opt-parser=false, enabled=true
 #*******************************************************************************
 https://github.com/blackmatrix7/ios_rule_script/raw/master/rule/QuantumultX/Apple/Apple.list, tag=Apple, update-interval=86400, opt-parser=false, enabled=true
 #*******************************************************************************
 https://raw.githubusercontent.com/General74110/QuantumultX/main/NeteaseMusic.list, tag=网易云音乐, update-interval=86400, opt-parser=false, enabled=true
+#*******************************************************************************
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/SteamCN/SteamCN.list, tag=SteamCN, update-interval=86400, opt-parser=true, enabled=true
 #*******************************************************************************
 https://github.com/General74110/ios_rule_script/raw/master/rule/QuantumultX/Google/Google.list, tag=Google, update-interval=86400, opt-parser=false, enabled=true
 #*******************************************************************************
@@ -152,7 +156,7 @@ https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Get_Cookie_New.conf
 #*******************************************************************************
 https://raw.githubusercontent.com/chavyleung/scripts/master/box/rewrite/boxjs.rewrite.quanx.conf, tag=BoxJs（BoxJs地址：http://boxjs.com）, update-interval=86400, opt-parser=true, enabled=true
 #*******************************************************************************
-https://raw.githubusercontent.com/General74110/QuantumultX/main/JS.conf, tag=解锁, update-interval=86400, opt-parser=true, enabled=true
+https://raw.githubusercontent.com/General74110/QuantumultX/main/JS.conf, tag=解锁, update-interval=86400, opt-parser=true, enabled=flase
 #*******************************************************************************
 https://cdn.jsdelivr.net/gh/General74110/QuantumultX@main/GithubCDN.conf, tag=GitHub CDN加速, update-interval=86400, opt-parser=true, enabled=false
 #*******************************************************************************
