--- a/MacBook M1.conf
+++ b/MacBook M1.conf
@@ -112,11 +112,11 @@ url-latency-benchmark=日本, server-tag-regex=(?=.*(日本|JP|(?i)Japan))^((?!(
 # 部分规则有先后顺序要求，调整顺序可能失效
 [filter_remote]
 #——————————————————————————————————————————————————————————————————————————-----
-https://raw.githubusercontent.com/General74110/QuantumultX/main/Hijacking.list, tag=运营劫持, update-interval=86400, opt-parser=true, enabled=flase
+https://raw.githubusercontent.com/General74110/QuantumultX/main/Hijacking.list, tag=运营劫持, update-interval=86400, opt-parser=true, enabled=false
 #*******************************************************************************
-https://raw.githubusercontent.com/General74110/QuantumultX/main/Privacy.list, tag=隐私保护, update-interval=86400, opt-parser=false, enabled=flase
+https://raw.githubusercontent.com/General74110/QuantumultX/main/Privacy.list, tag=隐私保护, update-interval=86400, opt-parser=false, enabled=false
 #*******************************************************************************
-https://raw.githubusercontent.com/General74110/QuantumultX/main/Advertising.list, tag=📵 广告拦截, img-url=https://raw.githubusercontent.com/General74110/PNG/master/Advertising.png, update-interval=86400, opt-parser=true, enabled=flase
+https://raw.githubusercontent.com/General74110/QuantumultX/main/Advertising.list, tag=📵 广告拦截, img-url=https://raw.githubusercontent.com/General74110/PNG/master/Advertising.png, update-interval=86400, opt-parser=true, enabled=false
 #*******************************************************************************
 https://github.com/General74110/ios_rule_script/raw/master/rule/QuantumultX/TestFlight/TestFlight.list, tag=Test Flight, update-interval=86400, opt-parser=false, enabled=true
 #*******************************************************************************
