--- a/MacBook M1.conf
+++ b/MacBook M1.conf
@@ -156,7 +156,7 @@ https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Get_Cookie_New.conf
 #*******************************************************************************
 https://raw.githubusercontent.com/chavyleung/scripts/master/box/rewrite/boxjs.rewrite.quanx.conf, tag=BoxJs（BoxJs地址：http://boxjs.com）, update-interval=86400, opt-parser=true, enabled=true
 #*******************************************************************************
-https://raw.githubusercontent.com/General74110/QuantumultX/main/JS.conf, tag=解锁, update-interval=86400, opt-parser=true, enabled=flase
+https://raw.githubusercontent.com/General74110/QuantumultX/main/JS.conf, tag=解锁, update-interval=86400, opt-parser=true, enabled=false
 #*******************************************************************************
 https://cdn.jsdelivr.net/gh/General74110/QuantumultX@main/GithubCDN.conf, tag=GitHub CDN加速, update-interval=86400, opt-parser=true, enabled=false
 #*******************************************************************************
